# axum-restapi-server

./: Cargo.toml  makefile
.cargo/: config.toml
examples/: quick_dev.rs
src/: error.rs  log.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
