[package]
name = "axum-full-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
axum = {version="0.6", features = ["macros"]}
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9.0"
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.24"
uuid = { version = "1", features = ["v4", "fast-rng",] }
serde_with = "3.3.0"

[dev-dependencies]
anyhow = "1.0.69"
httpc-test = "0.1.1"
